--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,4 +1,4 @@
-<h1 id="main_header">Good Morning<%=user.name%></h1>
+<h1 id="main_header">Good Morning<%= @user.name%></h1>
 <h1> Have you had your coffee?</h1>
 
 <div class="floating-box">
