--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,12 +19,13 @@
 </head>
 <body >
 
-<nav>
+<nav >
   <ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">Treats</a></li>
-  <li><a href="#contact">Coffee</a></li>
-  <li><a href="#about">About</a></li>
+    <li><a class="active" href="#home">Home</a></li> |
+    <li><a href="#news">Sign In</a></li> |
+    <li><a href="#contact">Log In</a></li> |
+    <li><a href="#contact">Log Out</a></li> |
+    <li><a href="#about">About</a></li>
 </ul>
 </nav>
 
