--- a/public/css/application.css
+++ b/public/css/application.css
@@ -26,3 +26,13 @@ body {
 	margin-right: 200px;
 	background-attachment: fixed;
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    display: inline;
+}
