--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,16 +19,45 @@
 </head>
 <body >
 
-<nav >
-  <ul>
-    <li><a class="active" href="#home">Home</a></li> |
-    <li><a href="#news">Sign In</a></li> |
-    <li><a href="#contact">Log In</a></li> |
-    <li><a href="#contact">Log Out</a></li> |
-    <li><a href="#about">About</a></li>
-</ul>
+
+  <% if logged_in? %>
+  <nav  style="padding-top: -1;max-width: 960px;">
+    <ul>
+      <li><a class="active" href="/home">Coffee Cats</a></li> |
+      <li><a href="#contact">Log Out</a></li> |
+      <li><a href="#about">Analytics</a></li>
+      <li><a href="/users/<%=current_user.id%>"> <%= current_user.username %> </a></li>
+      <form action="/sessions/logout" method="post">
+        <input type="hidden" name="_method" value="delete">
+        <input class="logout-button" type="submit" value="Logout">
+      </form>
+    </ul>
+
 </nav>
 
-  <%= yield %>
-</body>
-</html>
+<div class="slogan">
+      <p>Kittens</p>
+    </div>
+
+    <% else %>
+      <nav style="padding-top: -1;">
+
+    <ul>
+      <li><a class="active" href="/home">StackUnderflow</a></li>
+      <li><a href="/sessions/new">Login</a></li>
+      <li><a href="/users/new">Register</a></li>
+      <li><a href="/">Home</a></li>
+      <form class="navbar-search pull-right" action="">
+        <input type="text" class="search-query span2" placeholder="Search">
+      </form>
+    </nav>
+  </ul>
+
+
+  <% end %>
+
+
+
+    <%= yield %>
+  </body>
+  </html>
