--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -3,3 +3,4 @@
 <h3 class="user-questions-header"></h3>
 
 </div>
+<a href="https://lowpowerlab.com/forum/projects/moteino-coffee-maker/">Coffee Hack</a>
